log
Fri May 13 15:50:16 UTC 2022: 
 sudoku.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_final’:
sudoku.c:67:27: error: ‘o’ undeclared (first use in this function)
       if(n->sudo[i][j] == o){
                           ^
sudoku.c:67:27: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1f11c0a
Fri May 13 15:50:30 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
20d8ed3
Fri May 13 15:52:36 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|0
1ac2cfc
Fri May 13 15:53:19 UTC 2022: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
5c20d15
Fri May 13 15:53:46 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
be32f08
Fri May 13 16:06:36 UTC 2022: 
 sudoku.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 30/70
5f4180d
Mon May 16 03:29:12 UTC 2022: 
 sudoku.c | 28 ++++++++++++++++++++++++++++
 1 file changed, 28 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:71:8: error: ‘l’ undeclared (first use in this function)
   for( l=0;l<9;l++)
        ^
sudoku.c:71:8: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
23e7165
Mon May 16 03:30:22 UTC 2022: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|4
total_score: 10/70
cff65f6
Mon May 16 03:32:30 UTC 2022: 
 sudoku.c | 69 ++++++++++++++++++++++++++++++++++++++++------------------------
 1 file changed, 43 insertions(+), 26 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:10: error: implicit declaration of function ‘lineaVacia’ [-Werror=implicit-function-declaration]
     flag=lineaVacia();
          ^~~~~~~~~~
sudoku.c:51:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c:64:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c:80:9: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
     flag=lineaVacia();
         ^
sudoku.c: At top level:
sudoku.c:103:6: error: conflicting types for ‘lineaVacia’
 int* lineaVacia()
      ^~~~~~~~~~
sudoku.c:51:10: note: previous implicit declaration of ‘lineaVacia’ was here
     flag=lineaVacia();
          ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9d7565e
Mon May 16 03:33:02 UTC 2022: 
 sudoku.c | 20 +++++++++++---------
 1 file changed, 11 insertions(+), 9 deletions(-)
 tests:  4|3
total_score: 30/70
b7ec89d
Mon May 16 03:35:09 UTC 2022: 
 sudoku.c | 30 ++++++++++++++++++++++++++++--
 1 file changed, 28 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
7aef4b7
Mon May 16 03:40:30 UTC 2022: 
 sudoku.c | 24 ++++++++++++------------
 1 file changed, 12 insertions(+), 12 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:100:10: error: ‘flag’ undeclared (first use in this function); did you mean ‘float’?
       if(flag[sudo]==0)
          ^~~~
          float
sudoku.c:100:10: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c994c98
Mon May 16 03:40:59 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
04f7905
Mon May 16 03:47:31 UTC 2022: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
f5418df
Mon May 16 03:48:08 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:185:5: error: value computed is not used [-Werror=unused-value]
     *cont++;
     ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
95ac215
Mon May 16 03:48:35 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘DFS’:
sudoku.c:185:12: error: expected expression before ‘;’ token
     cont*++;
            ^
Compilation failed
ff1ec62
Mon May 16 03:51:47 UTC 2022: 
 sudoku.c | 30 +++++++-----------------------
 1 file changed, 7 insertions(+), 23 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:138:21: error: ‘Adj’ undeclared (first use in this function); did you mean ‘adj’?
         if(is_valid(Adj)==1)
                     ^~~
                     adj
sudoku.c:138:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c19c98d
Mon May 16 03:51:59 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 55/70
6f2cb81
Mon May 16 03:52:25 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
5db780a
